--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -11,6 +11,8 @@
 
 <body>
     {% include 'navbar.html' %}
+    
+
     <h3 class="text-center my-3">Feedback</h3>
 
     <div class="container">
@@ -21,7 +23,28 @@
                     <form action="/feedback/" method="POST">
                       
                         {% csrf_token %}
-                        {{form.as_p}}
+
+                        <div class="form-group mb-3">
+                            <label for="name">Name</label>
+                            <input type="text" class="form-control" id="name" name="name" placeholder="Enter Your Name">
+                        </div>
+                
+                        <div class="form-group mb-3">
+                            <label for="email">Email address</label>
+                            <input type="email" class="form-control" id="email" name="email" placeholder="name@example.com">
+                        </div>
+                      
+                        <div class="form-group mb-3">
+                            <label for="phone">Phone Number</label>
+                            <input type="text" class="form-control" id="phone" name="phone" placeholder="Enter Your Phone No ">
+                        </div>
+                        
+                    
+                        <div class="form-group mb-3">
+                            <label for="desc">Your Feedback </label>
+                            <textarea class="form-control" id="desc" name="desc" rows="3"></textarea>
+                        </div>
+                        
 
                         <div class="container text-center">
                             <button type="submit" class="btn btn-primary">
